baseurl:learn-python

--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ title: Python 基础教程
 email: jia.liu@ctrip.com
 description: > 
 
-baseurl: "" # the subpath of your site, e.g. /blog/
+baseurl: "/learn-python/" # the subpath of your site, e.g. /blog/
 url: "http://git.dev.ctrip.com"
 
 # Build settings
