set email to heychilde@gmailc.om

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
 title: Python 基础教程
-email: jia.liu@ctrip.com
+email: heychilde@gmail.com
 description: > 
 
 baseurl: "/learn-python/" # the subpath of your site, e.g. /blog/
